# top-2000-eda

./: .gitignore  exploration.ipynb  get_metadata.ipynb  merge_data.ipynb  pyproject.toml
data/: TOP-2000-1999.xlsx  TOP-2000-2000.xlsx  TOP-2000-2001.xlsx  TOP-2000-2002.xlsx  TOP-2000-2003.xlsx  TOP-2000-2004.xlsx  TOP-2000-2005.xlsx  TOP-2000-2006.xlsx  TOP-2000-2007.xlsx  TOP-2000-2008.xlsx  TOP-2000-2009.xlsx  TOP-2000-2010.xlsx  TOP-2000-2011.xlsx  TOP-2000-2012.xlsx  TOP-2000-2013.xlsx  TOP-2000-2014.xlsx  TOP-2000-2015.xlsx  TOP-2000-2016.xlsx  TOP-2000-2017.xlsx  TOP-2000-2018.xlsx  TOP-2000-2019.xlsx  TOP-2000-2020.xlsx  TOP-2000-2024.xlsx  Top 2000 2021.xlsx  song_metadata.csv
data/final/: final.parquet
