[tool.poetry]
name = "top-2000 eda"
version = "0.1.0"
description = ""
authors = ["Jeroen Nelen <jwnelen@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.1"
openpyxl = "^3.1.5"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
